# apropos-tx

./: .gitignore  Makefile  README.md  apropos-tx.cabal  cabal-haskell.nix.project  cabal.project  flake.nix  hie.yaml
.github/workflows/: integrate.yaml
examples/: Main.hs
examples/Spec/: Int.hs  IntArrow.hs  IntArrowConstraint.hs  IntConstraint.hs  IntPair.hs  IntPermutationGen.hs
examples/Spec/Plutarch/: CostModel.hs  MagicNumber.hs
src/Apropos/: Builder.hs  ContextBuilder.hs  Gen.hs  HasResourceBounds.hs  Script.hs  TxArr.hs
src/Apropos/LogicalModel/Enumerable/: TH.hs
src/Apropos/Script/: Model.hs
src/Apropos/Script/Iso/: Arrow.hs  BinaryConstraint.hs  Constraint.hs  DSL.hs
src/Apropos/Script/Iso/Arrow/: Runner.hs
src/Apropos/Script/Iso/Constraint/: Runner.hs
src/Apropos/Tx/: Arrow.hs  Barrow.hs  Constraint.hs  ConstraintArrow.hs  Protocol.hs
src/Apropos/Tx/Arrow/: Runner.hs
src/Apropos/Tx/Constraint/: Policy.hs  Runner.hs
src/Plutarch/: ArrowDSL.hs  ShowProxyLiftedType.hs  Wires.hs
