cabal-version:      3.0
name:               apropos-tx
version:            1.0
extra-source-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  build-depends:
    , apropos
    , base               >=4.14
    , bytestring
    , containers
    , free
    , hedgehog
    , lens
    , minisat-solver
    , mtl
    , plutarch
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , pretty
    , pretty-show
    , safe
    , template-haskell
    , text
    , transformers

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -Wmissing-deriving-strategies -ddump-splices

library
  import:          lang
  exposed-modules:
    Apropos.Gen.Address
    Apropos.Gen.Api
    Apropos.Gen.Contexts
    Apropos.Gen.Credential
    Apropos.Gen.Crypto
    Apropos.Gen.DCert
    Apropos.Gen.Extra
    Apropos.Gen.Interval
    Apropos.Gen.Scripts
    Apropos.Gen.Time
    Apropos.Gen.TxId
    Apropos.Gen.Value
    Apropos.Script
    Apropos.Tx

  hs-source-dirs:  src

test-suite examples
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: examples
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Spec.Int
    Spec.IntPermutationGen
    Spec.Plutarch.CostModel
    Spec.Plutarch.MagicNumber

  build-depends:
    , apropos
    , apropos-tx
    , base
    , containers
    , hedgehog
    , mtl
    , plutarch
    , plutus-core
    , plutus-ledger-api
    , tasty
    , tasty-hedgehog
    , text
