cabal-version:      3.0
name:               apropos-tx
version:            1.0
extra-source-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  build-depends:
    , apropos
    , base               >=4.14
    , containers
    , free
    , hedgehog
    , lens
    , minisat-solver
    , mtl
    , plutarch
    , plutus-core
    , plutus-ledger-api
    , pretty
    , pretty-show
    , safe
    , template-haskell
    , text
    , transformers

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -Wmissing-deriving-strategies -ddump-splices

library
  import:          lang
  exposed-modules:
    Apropos.Script
    Apropos.Builder
    Apropos.Tx

  hs-source-dirs:  src

test-suite examples
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: examples
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Spec.Int
    Spec.IntPermutationGen
    Spec.Plutarch.CostModel
    Spec.Plutarch.MagicNumber

  build-depends:
    , apropos
    , apropos-tx
    , base
    , containers
    , hedgehog
    , mtl
    , tasty
    , tasty-hedgehog
    , text
